[package]
name = "ffmpeg_cli_utils"
version = "0.1.0"
edition = "2021"
authors = ["Tonywho <>"]
repository = "https://github.com/hjylxmhzq/ffmpeg-cli-utils"


[dependencies]
futures = "0.3"
lazy_static = "1"
tempfile = {version = "3" }
tokio = { version = "1", features = ["full"] }

[features]
default = ["async"]
async = []
